--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,8 +1,26 @@
 @font-face {
-    font-family: 'Quicksand';
-    src: url("../fonts/quicksandlight.woff2") format('woff2'),
-        url("../fonts/quicksandlight.woff") format('woff');
-    font-weight: 300;
+    font-family: 'Roboto-Regular', sans-serif;
+    src: url("../fonts/Roboto.woff2") format('woff2'),
+        url("../fonts/Roboto.woff") format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto-Bold', sans-serif;
+    src: url("../fonts/Robotobold.woff2") format('woff2'),
+        url("../fonts/Robotobold.woff") format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto-Medium', sans-serif;
+    src: url("../fonts/Robotobold.woff2") format('woff2'),
+        url("../fonts/Robotobold.woff") format('woff');
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
