--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,3 +1,4 @@
+// start header
 .header__top-inner {
     display: flex;
     justify-content: space-between;
@@ -57,3 +58,4 @@
         font-size: 14px;
     }
 }
+// end header
