--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -1,3 +1,4 @@
+// start search
 .search {
     background-color: $bg;
     background-repeat: no-repeat;
@@ -65,3 +66,4 @@
         }
     }
 }
+// end search
