--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,5 @@
 @import 'global';
 @import 'components/header';
 @import 'components/search';
+@import 'components/products';
+@import 'components/product-slider';
