--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,4 @@
 @import 'components/search';
 @import 'components/products';
 @import 'components/product-slider';
+@import 'components/advantages';
