--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -53,7 +53,7 @@
         padding: 10px 30px;
         align-items: center;
         min-height: 90px;
-        font-weight: 500;
+        @include f500;
     }
 
     &-name {
@@ -75,7 +75,7 @@
     &-price {
         font-size: 20px;
         color: $bg;
-        font-weight: 700;
+        @include f700;
     }
 
     &-info {
@@ -103,13 +103,15 @@
         }
 
         span {
-            font-weight: 500;
+            @include f500;
             font-size: 14px;
         }
     }
+
     &-star {
         font-size: 12px;
-        span{ 
+
+        span {
             color: $bg;
         }
     }
