--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,4 @@
 @import 'components/products';
 @import 'components/product-slider';
 @import 'components/advantages';
+@import 'components/author';
