--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,3 +7,5 @@
 @import 'components/product-slider';
 @import 'components/advantages';
 @import 'components/author';
+@import 'components/tutorial';
+@import 'components/footer';
